--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "d3-scale": "^3.2.1",
     "echarts": "^4.8.0",
     "echarts-for-react": "^2.0.16",
+    "emotion": "^10.0.27",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.14.1",
     "react-autosuggest": "^10.0.2",
