--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,11 @@ jobs:
 
       - name: Set env
         run:
-          echo "NODE_ENV="  + ${{ secrets.STAGING_NODE_ENV
-          }} + "GATSBY_MAPBOX_USER="  + ${{
-          secrets.GATSBY_MAPBOX_USER }} +
-          "GATSBY_MAPBOX_API_TOKEN=" + ${{
-          secrets.GATSBY_MAPBOX_API_TOKEN }} >> $GITHUB_ENV
+          echo "NODE_ENV=${{ secrets.STAGING_NODE_ENV}}
+          GATSBY_MAPBOX_USER=${{secrets.GATSBY_MAPBOX_USER
+          }}
+          GATSBY_MAPBOX_API_TOKEN=${{secrets.GATSBY_MAPBOX_API_TOKEN
+          }} >> $GITHUB_ENV
 
       - name: Install and Build 🔧
         run: |
@@ -39,4 +39,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: dist
+          FOLDER: demo/dist
