--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "untd-map",
   "version": "0.0.1",
   "description": "UNTD Map React component",
-  "repository": "",
+  "repository": "https://github.com/Hyperobjekt/untd-map",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
@@ -53,7 +53,8 @@
     "sanitize.css": "7.0.3",
     "sass-loader": "^9.0.3",
     "serve": "10.1.2",
-    "zustand": "^2.2.3"
+    "zustand": "^2.2.3",
+    "nwb": "0.25.x"
   },
   "peerDependencies": {
     "react": "16.x"
