--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,18 +21,19 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Set env
-        run:
-          echo "NODE_ENV=${{ secrets.STAGING_NODE_ENV}}
-          GATSBY_MAPBOX_USER=${{secrets.GATSBY_MAPBOX_USER
-          }}
-          GATSBY_MAPBOX_API_TOKEN=${{secrets.GATSBY_MAPBOX_API_TOKEN
-          }}" >> $GITHUB_ENV
+      - name: Set up and build
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+        env:
+          NODE_ENV: ${{ secrets.STAGING_NODE_ENV }}
+          GATSBY_MAPBOX_USER:
+            ${{secrets.GATSBY_MAPBOX_USER }}
+          GATSBY_MAPBOX_API_TOKEN:
+            ${{secrets.GATSBY_MAPBOX_API_TOKEN }}
 
-      - name: Install and Build 🔧
-        run: |
-          npm install
-          nwb build-react-component --copy-files
+      - run: npm install
+      - run: nwb build-react-component --copy-files
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
