--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Set up and build
+      - name: Set up Node
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
@@ -32,8 +32,14 @@ jobs:
           GATSBY_MAPBOX_API_TOKEN:
             ${{secrets.GATSBY_MAPBOX_API_TOKEN }}
 
-      - run: npm install
-      - run: nwb build-react-component --copy-files
+      - name: Install npm packages
+        run: npm install
+
+      - name: Debug
+        run: npm list | grep nwb
+
+      - name: Run nwb build
+        run: nwb build-react-component --copy-files
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
