--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "sanitize.css": "7.0.3",
     "sass-loader": "^9.0.3",
     "serve": "10.1.2",
-    "zustand": "^2.2.3",
-    "nwb": "0.25.x"
+    "zustand": "^2.2.3"
   },
   "peerDependencies": {
     "react": "16.x"
