--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,8 +48,9 @@ jobs:
             ${{secrets.GATSBY_MAPBOX_API_TOKEN }}
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.6.2
+        uses: crazy-max/ghaction-github-pages@v1
         with:
+          target_branch: gh-pages
+          build_dir: demo
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: demo/dist
