--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v1
         with:
           target_branch: gh-pages
-          build_dir: demo
+          build_dir: demo/dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
