--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,13 +39,17 @@ jobs:
         run: npm install nwb -g
 
       - name: Run nwb build
-        run: nwb build-react-component --copy-files
+        run:
+          NODE_ENV=$NODE_ENV
+          GATSBY_MAPBOX_USER=$GATSBY_MAPBOX_USER
+          GATSBY_MAPBOX_API_TOKEN=$GATSBY_MAPBOX_API_TOKEN
+          nwb build-react-component --copy-files
         env:
           NODE_ENV: ${{ secrets.STAGING_NODE_ENV }}
           GATSBY_MAPBOX_USER:
-            ${{secrets.GATSBY_MAPBOX_USER }}
+            ${{ secrets.GATSBY_MAPBOX_USER }}
           GATSBY_MAPBOX_API_TOKEN:
-            ${{secrets.GATSBY_MAPBOX_API_TOKEN }}
+            ${{ secrets.GATSBY_MAPBOX_API_TOKEN }}
 
       - name: Deploy 🚀
         uses: crazy-max/ghaction-github-pages@v1
@@ -55,6 +59,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GATSBY_MAPBOX_USER:
-            ${{secrets.GATSBY_MAPBOX_USER }}
+            ${{ secrets.GATSBY_MAPBOX_USER }}
           GATSBY_MAPBOX_API_TOKEN:
-            ${{secrets.GATSBY_MAPBOX_API_TOKEN }}
+            ${{ secrets.GATSBY_MAPBOX_API_TOKEN }}
