--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "d3-ease": "^1.0.5",
     "d3-interpolate": "^1.3.2",
     "d3-scale": "^3.2.1",
+    "deepmerge": "^4.2.2",
     "echarts": "^4.8.0",
     "echarts-for-react": "^2.0.16",
     "emotion": "^10.0.27",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.14.1",
+    "papaparse": "^5.3.0",
     "react-autosuggest": "^10.0.2",
     "react-device-detect": "^1.13.1",
     "react-icons": "^3.10.0",
