--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "echarts": "^4.8.0",
     "echarts-for-react": "^2.0.16",
     "emotion": "^10.0.27",
+    "formik": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.14.1",
     "papaparse": "^5.3.0",
@@ -55,6 +56,7 @@
     "sanitize.css": "7.0.3",
     "sass-loader": "^9.0.3",
     "serve": "10.1.2",
+    "yup": "^0.32.9",
     "zustand": "^2.2.3"
   },
   "peerDependencies": {
