--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "fs": "0.0.1-security",
     "nwb": "0.25.x",
     "nwb-sass": "^0.10.2",
+    "prettier": "2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-styleguidist": "^11.0.8"
