--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-resize-aware": "^3.0.1",
     "react-transition-group": "^4.1.1",
     "reactstrap": "^8.4.1",
+    "recharts": "^2.0.9",
     "sanitize.css": "7.0.3",
     "sass-loader": "^9.0.3",
     "serve": "10.1.2",
