--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "copy-to-clipboard": "^3.3.1",
     "d3": "^5.16.0",
     "d3-array": "^2.4.0",
+    "d3-dsv": "^1.2.0",
     "d3-ease": "^1.0.5",
     "d3-interpolate": "^1.3.2",
     "d3-scale": "^3.2.1",
@@ -55,6 +56,7 @@
     "sanitize.css": "7.0.3",
     "sass-loader": "^9.0.3",
     "serve": "10.1.2",
+    "styled-components": "^5.3.0",
     "yup": "^0.32.9",
     "zustand": "^2.2.3"
   },
