--- a/package.json
+++ b/package.json
@@ -30,15 +30,8 @@
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "copy-to-clipboard": "^3.3.1",
-    "d3": "^5.16.0",
-    "d3-array": "^2.4.0",
-    "d3-dsv": "^1.2.0",
     "d3-ease": "^1.0.5",
-    "d3-interpolate": "^1.3.2",
-    "d3-scale": "^3.2.1",
     "deepmerge": "^4.2.2",
-    "echarts": "^4.8.0",
-    "echarts-for-react": "^2.0.16",
     "emotion": "^10.0.27",
     "formik": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
@@ -50,7 +43,7 @@
     "react-joyride": "^2.2.1",
     "react-map-gl": "^5.3.10",
     "react-resize-aware": "^3.0.1",
-    "react-transition-group": "^4.1.1",
+    "react-spring": "^9.1.2",
     "reactstrap": "^8.4.1",
     "recharts": "^2.0.9",
     "sanitize.css": "7.0.3",
@@ -61,19 +54,24 @@
     "zustand": "^2.2.3"
   },
   "peerDependencies": {
-    "react": "16.x"
+    "react": "^16.13.1"
   },
   "devDependencies": {
     "bootstrap": "^4.5.2",
     "dotenv-webpack": "^1.8.0",
     "eslint-config-react-app": "^5.2.1",
     "fs": "0.0.1-security",
+    "html-webpack-plugin": "^4.3.0",
     "nwb": "0.25.x",
     "nwb-sass": "^0.10.2",
     "prettier": "2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-styleguidist": "^11.0.8"
+    "react-styleguidist": "^11.0.8",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0"
   },
   "browserslist": [
     ">0.2%",
