--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untd-map",
+  "name": "@hyperobjekt/untd-map",
   "version": "1.0.0",
   "description": "UNTD Map React component",
   "repository": "https://github.com/Hyperobjekt/untd-map",
@@ -20,7 +20,8 @@
     "styleguide:build": "styleguidist build",
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
+    "test:watch": "nwb test-react --server",
+    "deploy:gh": "git subtree push --prefix demo/dist origin gh-pages"
   },
   "dependencies": {
     "@n8tb1t/use-scroll-position": "^1.0.43",
